--- a/ResumeBuilder.html
+++ b/ResumeBuilder.html
@@ -12,7 +12,7 @@
         <div class="description">
           <h1 class="profile_name">ADLURI AKSHAY RAJ</h1>
           <div class="child">
-          <img src="file:///C:/Users/adlur/OneDrive/Pictures/bgbyrakesh11.png" width="300px" height="200px">
+          <img src="./bgbyrakesh11.png" width="300px" height="200px">
           </div>
           <div class="info">
           <p class="profile_title">
